--- a/html101.html
+++ b/html101.html
@@ -4,8 +4,8 @@
        <title>HTML 101</title>
        </head>
        <body>
-       <h1>Welcome to html page at
+       <h1>Welcome to Sara's html page at
        <a href="https://www.usf.edu">USF</a> </h1>
-       <p>Please check back later</p>
+       <p>We'll see you soon! Thank you!</p>
        </body>
 </html>
